--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,23 +32,30 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      deployment:
-  staging:
-    branch: master
-    heroku:
-     appname: complejolautaro
-    commands:
-      - |
-        cat >~/.netrc <<EOF
-        machine api.heroku.com
-          login $HEROKU_LOGIN
-          password $HEROKU_API_KEY
-        machine git.heroku.com
-          login $HEROKU_LOGIN
-          password $HEROKU_API_KEY
-        EOF
-      - chmod 600 ~/.netrc # Heroku cli complains about permissions without this
-      - "[[ ! -s \"$(git rev-parse --git-dir)/shallow\" ]] || git fetch --unshallow"
-      - git push git@heroku.com:complejolautaro.git $CIRCLE_SHA1:refs/heads/master
-      - heroku run rake db:migrate --app complejolautaro:
-          timeout: 400 # if your deploys take a long time
+
+  deploy-job:
+    docker:
+      - image: circleci/node:7.10
+    working_directory: ~/repo 
+    steps:
+      - run:
+          name: Run setup script
+          command: bash .circleci/setup-heroku.sh
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push --force git@heroku.com:complejolautaro.git HEAD:refs/heads/master
+            heroku run python manage.py deploy
+            heroku restart
+               
+ workflows:
+   version: 2
+   build-deploy:
+     jobs:
+       - build-job
+       - deploy-job:
+           requires:
+             - build-job
+           filters:
+             branches:
+               only: master
