--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,30 +32,8 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
-  deploy-job:
-    docker:
-      - image: circleci/node:7.10
-    working_directory: ~/repo 
-    steps:
-      - run:
-          name: Run setup script
-          command: bash .circleci/setup-heroku.sh
-      - run:
-          name: Deploy Master to Heroku
-          command: |
-            git push --force git@heroku.com:complejolautaro.git HEAD:refs/heads/master
-            heroku run python manage.py deploy
-            heroku restart
-               
- workflows:
-   version: 2
-   build-deploy:
-     jobs:
-       - build-job
-       - deploy-job:
-           requires:
-             - build-job
-           filters:
-             branches:
-               only: master
+  deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: complejolautaro
