--- a/package.json
+++ b/package.json
@@ -1,54 +1,65 @@
 {
-  "name": "complejo_lautaro",
-  "version": "0.0.0",
-  "license": "MIT",
-  "angular-cli": {},
+  "name": "complejo-lautaro",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Complejo Lautaro",
   "scripts": {
     "ng": "ng",
+    "build": "ng build",
     "start": "node app.js",
     "test": "ng test",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor",
-    "build": "ng build --prod --output-hashing=none"
+    "lint": "tslint ./src/**/*.ts -t verbose",
+    "e2e": "ng e2e"
   },
-  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
+    "@angular/animations": "~5.0.0",
+    "@angular/common": "~5.0.0",
+    "@angular/compiler": "~5.0.0",
+    "@angular/compiler-cli": "~5.0.0",
+    "@angular/core": "~5.0.0",
+    "@angular/forms": "~5.0.0",
+    "@angular/http": "~5.0.0",
+    "@angular/platform-browser": "~5.0.0",
+    "@angular/platform-browser-dynamic": "~5.0.0",
+    "@angular/platform-server": "~5.0.0",
+    "@angular/router": "~5.0.0",
+    "@angular/upgrade": "~5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular-calendar": "^0.23.3",
+    "angular-in-memory-web-api": "~0.5.0",
     "core-js": "^2.4.1",
-    "express": "^4.16.2",
-    "glob": "^7.1.2",
+    "date-fns": "^1.29.0",
     "hammerjs": "^2.0.8",
-    "mongodb": "^3.0.1",
+    "mongodb": "^3.0.2",
+    "ng-bootstrap": "^1.6.3",
     "ngx-carousel": "^1.3.5",
     "ngx-pagination": "^3.0.3",
-    "rxjs": "^5.5.6",
-    "ts-helpers": "^1.1.1",
-    "webpack": "^3.10.0",
-    "zone.js": "^0.7.2"
+    "rxjs": "^5.5.0",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.28.3",
-    "codelyzer": "~2.0.0-beta.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "@angular/cli": "1.6.5",
+    "@types/jasmine": "~2.8.0",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^6.0.45",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.3.3",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
-  }
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "lodash": "^4.16.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "~5.1.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^3.15.1",
+    "typescript": "2.4.2"
+  },
+  "repository": {}
 }
